DASH-15 DASH-16 DASH-17 DASH-18 DASH-19 DASH-67 Added initial work on saving info about blocking categories of items and items from particular contexts.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312947 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -38,6 +38,18 @@ sakai_id varchar(99), primary key (id) ); \
 create unique index dash_person_user_id_idx on dash_person (user_id); \
 create unique index dash_person_sakai_id_idx on dash_person (sakai_id)
 
+create.PersonContext.table = create table if not exists dash_person_context (id bigint not null auto_increment, \
+person_id bigint not null, context_id bigint not null); \
+create unique index dash_person_context_idx on dash_person_context (person_id, context_id);
+
+create.PersonContextSourceType.table = create table if not exists dash_person_context_type (id bigint not null auto_increment, \
+person_id bigint not null, context_id bigint not null, sourcetype_id bigint not null); \
+create unique index dash_person_contxt_st_idx on dash_person_context_type (person_id, context_id, sourcetype_id);
+
+create.PersonSourceType.table = create table if not exists dash_person_sourcetype (id bigint not null auto_increment, \
+person_id bigint not null, sourcetype_id bigint not null); \
+create unique index dash_person_sourcetype_idx on dash_person_sourcetype (person_id, sourcetype_id);
+
 create.SourceType.table = create table if not exists dash_sourcetype ( id bigint not null auto_increment, identifier varchar(255) not null, \
 access_permission varchar(255), primary key (id) ); \
 create unique index dash_source_idx on dash_sourcetype (identifier)
@@ -82,6 +94,12 @@ values (?, ?, ?, ?, ?, ?)
 insert.NewsLink = insert into dash_news_link (person_id, item_id, context_id, hidden, sticky) values (?, ?, ?, ?, ?)
 
 insert.Person = insert into dash_person (user_id,sakai_id) values (?, ?)
+
+insert.PersonContext = insert into dash_person_context (person_id, context_id) values (?, ?)
+
+insert.PersonContextSourceType = insert into dash_person_context_type (person_id, context_id, sourcetype_id) values (?, ?, ?)
+
+insert.PersonSourceType.table = insert into dash_person_sourcetype (person_id, sourcetype_id) values (?, ?)
 
 insert.SourceType = insert into dash_sourcetype (identifier, access_permission) values (?, ?)
 
