--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -44,10 +44,25 @@ create sequence dash_news_link_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_news_link_idx on dash_news_link (person_id, context_id, item_id, hidden, sticky)
 
 create.Person.table = create table dash_person \
-( id number not null primary key,user_id varchar2(99) not null,sakai_id varchar2(99) ); \
+( id number not null primary key,user_id varchar2(99) not null, sakai_id varchar2(99) ); \
 create sequence dash_person_seq start with 1 increment by 1 nomaxvalue; \
 create unique index dash_person_user_id_idx on dash_person (user_id); \
 create unique index dash_person_sakai_id_idx on dash_person (sakai_id)
+
+create.PersonContext.table = create table if not exists dash_person_context (id number not null primary key, \
+person_id number not null, context_id number not null); \
+create sequence dash_person_context_seq start with 1 increment by 1 nomaxvalue; \
+create unique index dash_person_context_idx on dash_person_context (person_id, context_id);
+
+create.PersonContextSourceType.table = create table if not exists dash_person_context_type (id number not null primary key, \
+person_id number not null, context_id number not null, sourcetype_id number not null); \
+create sequence dash_person_contxt_st_seq start with 1 increment by 1 nomaxvalue; \
+create unique index dash_person_contxt_st_idx on dash_person_context_type (person_id, context_id, sourcetype_id);
+
+create.PersonSourceType.table = create table if not exists dash_person_sourcetype (id number not null primary key, \
+person_id number not null, sourcetype_id number not null); \
+create sequence dash_person_sourcetype_seq start with 1 increment by 1 nomaxvalue; \
+create unique index dash_person_sourcetype_idx on dash_person_sourcetype (person_id, context_id, sourcetype_id);
 
 create.SourceType.table = create table dash_sourcetype \
 ( id number not null primary key, identifier varchar2(255) not null, access_permission varchar2(255) ); \
@@ -96,6 +111,12 @@ insert.NewsLink = insert into dash_news_link (id, person_id, item_id, context_id
 values (dash_news_link_seq.nextval, ?, ?, ?, ?, ?)
 
 insert.Person = insert into dash_person (id,user_id,sakai_id) values (dash_person_seq.nextval, ?, ?)
+
+insert.PersonContext = insert into dash_person_context (id, person_id, context_id) values (dash_person_context_seq.nextval, ?, ?)
+
+insert.PersonContextSourceType = insert into dash_person_context_type (id, person_id, context_id, sourcetype_id) values (dash_person_contxt_st_seq.nextval, ?, ?, ?)
+
+insert.PersonSourceType.table = insert into dash_person_sourcetype (id person_id, sourcetype_id) values (dash_person_sourcetype_seq.nextval, ?, ?)
 
 insert.SourceType = insert into dash_sourcetype ( id, identifier, access_permission) values (dash_sourcetype_seq.nextval, ?, ?)
 
