--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -50,19 +50,19 @@ create unique index dash_person_user_id_idx on dash_person (user_id); \
 create unique index dash_person_sakai_id_idx on dash_person (sakai_id)
 
 create.PersonContext.table = create table if not exists dash_person_context (id number not null primary key, \
-person_id number not null, context_id number not null); \
+item_type number(10,0) not null, person_id number not null, context_id number not null); \
 create sequence dash_person_context_seq start with 1 increment by 1 nomaxvalue; \
-create unique index dash_person_context_idx on dash_person_context (person_id, context_id);
+create unique index dash_person_context_idx on dash_person_context (item_type, person_id, context_id);
 
 create.PersonContextSourceType.table = create table if not exists dash_person_context_type (id number not null primary key, \
-person_id number not null, context_id number not null, sourcetype_id number not null); \
+item_type number(10,0) not null, person_id number not null, context_id number not null, sourcetype_id number not null); \
 create sequence dash_person_contxt_st_seq start with 1 increment by 1 nomaxvalue; \
-create unique index dash_person_contxt_st_idx on dash_person_context_type (person_id, context_id, sourcetype_id);
+create unique index dash_person_contxt_st_idx on dash_person_context_type (item_type, person_id, context_id, sourcetype_id);
 
 create.PersonSourceType.table = create table if not exists dash_person_sourcetype (id number not null primary key, \
-person_id number not null, sourcetype_id number not null); \
+item_type number(10,0) not null, person_id number not null, sourcetype_id number not null); \
 create sequence dash_person_sourcetype_seq start with 1 increment by 1 nomaxvalue; \
-create unique index dash_person_sourcetype_idx on dash_person_sourcetype (person_id, context_id, sourcetype_id);
+create unique index dash_person_sourcetype_idx on dash_person_sourcetype (item_type, person_id, context_id, sourcetype_id);
 
 create.SourceType.table = create table dash_sourcetype \
 ( id number not null primary key, identifier varchar2(255) not null, access_permission varchar2(255) ); \
@@ -112,11 +112,11 @@ values (dash_news_link_seq.nextval, ?, ?, ?, ?, ?)
 
 insert.Person = insert into dash_person (id,user_id,sakai_id) values (dash_person_seq.nextval, ?, ?)
 
-insert.PersonContext = insert into dash_person_context (id, person_id, context_id) values (dash_person_context_seq.nextval, ?, ?)
+insert.PersonContext = insert into dash_person_context (id, item_type, person_id, context_id) values (dash_person_context_seq.nextval, ?, ?, ?)
 
-insert.PersonContextSourceType = insert into dash_person_context_type (id, person_id, context_id, sourcetype_id) values (dash_person_contxt_st_seq.nextval, ?, ?, ?)
+insert.PersonContextSourceType = insert into dash_person_context_type (id, item_type, person_id, context_id, sourcetype_id) values (dash_person_contxt_st_seq.nextval, ?, ?, ?, ?)
 
-insert.PersonSourceType.table = insert into dash_person_sourcetype (id person_id, sourcetype_id) values (dash_person_sourcetype_seq.nextval, ?, ?)
+insert.PersonSourceType = insert into dash_person_sourcetype (id, item_type, person_id, sourcetype_id) values (dash_person_sourcetype_seq.nextval, ?, ?, ?)
 
 insert.SourceType = insert into dash_sourcetype ( id, identifier, access_permission) values (dash_sourcetype_seq.nextval, ?, ?)
 
@@ -218,14 +218,14 @@ from dash_person usr join dash_news_link link on usr.id=link.person_id join dash
 join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where usr.sakai_id=? and site.context_id=? order by ni.news_time desc
 
-select.NewsLink.by.newsItemId.personId = select ci.id as ci_id, ci.news_time as ci_news_time, ci.news_time_label_key as ci_news_time_label_key, ci.title as ci_title, \
-ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+select.NewsLink.by.newsItemId.personId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.news_time_label_key as ni_news_time_label_key, ni.title as ni_title, \
+ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title, \
 usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
 link.id as link_id, link.hidden as link_hidden, link.sticky as link_sticky \
-from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ci on ci.id=link.item_id \
-join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ci.entity_type \
+from dash_news_link link join dash_person usr on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where link.item_id=? and link.person_id=?
 
 select.Person.by.id = select id as p_id, sakai_id as p_sakai_id, user_id as p_user_id from dash_person where id=?
@@ -233,6 +233,28 @@ select.Person.by.id = select id as p_id, sakai_id as p_sakai_id, user_id as p_us
 select.Person.by.userId = select id as p_id, sakai_id as p_sakai_id, user_id as p_user_id from dash_person where user_id=?
 
 select.Person.by.sakaiId = select id as p_id, sakai_id as p_sakai_id, user_id as p_user_id from dash_person where sakai_id=?
+
+select.PersonContext.by.sakaiUserId = select pcst.id as pc_id, pcst.item_type as pc_itemtype, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id, \
+site.id as site_id, site.context_id as site_context_id, site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person usr join dash_person_sourcetype pcst join on usr.id=pcst.person_id \
+join dash_context site on pcst.context_id=site.id \
+where usr.sakai_id=?
+
+select.PersonContextSourceType.by.sakaiUserId = select pcst.id as pc_id, pcst.item_type as pc_itemtype, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id, \
+site.id as site_id, site.context_id as site_context_id, site.context_url as site_context_url, site.context_title as site_context_title, \
+st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission \
+from dash_person usr join dash_person_sourcetype pcst join on usr.id=pcst.person_id \
+join dash_context site on pcst.context_id=site.id join dash_sourcetype st on pcst.sourcetype_id=st.id \
+where usr.sakai_id=?
+
+select.PersonSourceType.by.sakaiUserId = select pcst.id as pc_id, pcst.item_type as pc_itemtype, \
+usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id, \
+st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission \
+from dash_person usr join dash_person_sourcetype pcst join on usr.id=pcst.person_id \
+join dash_sourcetype st on pcst.sourcetype_id=st.id \
+where usr.sakai_id=?
 
 select.sakaiUserIds.in.calendarLinks.by.entityReference = select person.sakai_id from dash_person person \
 join dash_calendar_link link on link.person_id=person.id join dash_calendar_item item on link.item_id=item.id \
