--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -143,7 +143,10 @@ st.access_permission as type_accessPermission, site.id as site_id, site.context_
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_person usr join dash_calendar_link link on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
 join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type \
-where usr.sakai_id=? order by ci.calendar_time asc
+where usr.sakai_id=? and site.id not in (select pc.context_id from dash_person_context pc where pc.person_id=usr.id and pc.item_type='0') \
+and st.id not in (select ps.sourcetype_id from dash_person_sourcetype ps where ps.person_id=usr.id and ps.item_type='0') \
+and st.id not in (select pcs.sourcetype_id from dash_person_context_type pcs where pcs.person_id=usr.id and pcs.context_id=site.id and pcs.item_type='0') \
+and link.sticky='0' and link.hidden='0' order by ci.calendar_time asc
 
 select.CalendarItems.by.sakaiId.contextId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, \
 ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
@@ -151,7 +154,42 @@ st.access_permission as type_accessPermission, site.id as site_id, site.context_
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_person usr join dash_calendar_link link on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
 join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type \
-where usr.sakai_id=? and site.context_id=? order by ci.calendar_time asc
+where usr.sakai_id=? and site.context_id=? and site.id not in (select pc.context_id from dash_person_context pc where pc.person_id=usr.id and pc.item_type='0') \
+and st.id not in (select ps.sourcetype_id from dash_person_sourcetype ps where ps.person_id=usr.id and ps.item_type='0') \
+and st.id not in (select pcs.sourcetype_id from dash_person_context_type pcs where pcs.person_id=usr.id and pcs.context_id=site.id and pcs.item_type='0') \
+and link.sticky='0' and link.hidden='0' order by ci.calendar_time asc
+
+select.CalendarItems.by.sakaiId.contextId.hidden = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, \
+ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person usr join dash_calendar_link link on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
+join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type \
+where link.hidden='1' and usr.sakai_id=? and site.context_id=? order by ci.calendar_time asc
+
+select.CalendarItems.by.sakaiId.contextId.sticky = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, \
+ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person usr join dash_calendar_link link on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
+join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type \
+where link.sticky='1' and usr.sakai_id=? and site.context_id=? order by ci.calendar_time asc
+
+select.CalendarItems.by.sakaiId.hidden = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, \
+ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person usr join dash_calendar_link link on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
+join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type \
+where link.hidden='1' and usr.sakai_id=? order by ci.calendar_time asc
+
+select.CalendarItems.by.sakaiId.sticky = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, \
+ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person usr join dash_calendar_link link on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
+join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type \
+where link.sticky='1' and usr.sakai_id=? order by ci.calendar_time asc
 
 select.CalendarLink.by.calendarItemId.personId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, \
 ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
