--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -276,7 +276,26 @@ st.access_permission as type_accessPermission, site.id as site_id, site.context_
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_person usr join dash_news_link link on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
 join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
-where usr.sakai_id=? order by ni.news_time desc
+where usr.sakai_id=? and site.id not in (select pc.context_id from dash_person_context pc where pc.person_id=usr.id and pc.item_type='1') \
+and st.id not in (select ps.sourcetype_id from dash_person_sourcetype ps where ps.person_id=usr.id and ps.item_type='1') \
+and st.id not in (select pcs.sourcetype_id from dash_person_context_type pcs where pcs.person_id=usr.id and pcs.context_id=site.id and pcs.item_type='1') \
+and link.sticky='0' and link.hidden='0' order by ni.news_time desc
+
+select.NewsItems.by.sakaiId.hidden = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person usr join dash_news_link link on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? and link.hidden='1' order by ni.news_time desc
+
+select.NewsItems.by.sakaiId.sticky = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person usr join dash_news_link link on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? and link.sticky='1' order by ni.news_time desc
 
 select.NewsItems.by.sakaiId.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
 ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
@@ -284,7 +303,26 @@ st.access_permission as type_accessPermission, site.id as site_id, site.context_
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_person usr join dash_news_link link on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
 join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
-where usr.sakai_id=? and site.context_id=? order by ni.news_time desc
+where usr.sakai_id=? and site.context_id=? and site.id not in (select pc.context_id from dash_person_context pc where pc.person_id=usr.id and pc.item_type='1') \
+and st.id not in (select ps.sourcetype_id from dash_person_sourcetype ps where ps.person_id=usr.id and ps.item_type='1') \
+and st.id not in (select pcs.sourcetype_id from dash_person_context_type pcs where pcs.person_id=usr.id and pcs.context_id=site.id and pcs.item_type='1') \
+and link.sticky='0' and link.hidden='0' order by ni.news_time desc
+
+select.NewsItems.by.sakaiId.contextId.sticky = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person usr join dash_news_link link on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? and site.context_id=? and link.sticky='1' order by ni.news_time desc
+
+select.NewsItems.by.sakaiId.contextId.hidden = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title \
+from dash_person usr join dash_news_link link on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
+join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
+where usr.sakai_id=? and site.context_id=? and link.hidden='1' order by ni.news_time desc
 
 select.NewsLink.by.newsItemId.personId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
 ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
