DASH-73 Added lookup of label key for schedule events based on "type" attribute of event object.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312955 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -24,5 +24,22 @@ resource.info.link = Download this resource.
 schedule.info.link = More info.
 schedule.news.time = Date posted: {0}
 
+schedule.key1 = Academic Calendar: {0}
+schedule.key2 = Activity: {0}
+schedule.key3 = Cancellation: {0}
+schedule.key4 = Class section - Discussion: {0}
+schedule.key5 = Class section - Lab: {0}
+schedule.key6 = Class section - Lecture: {0}
+schedule.key7 = Class section - Small Group: {0} 
+schedule.key8 = Class session: {0} 
+schedule.key9 = Computer Session: {0} 
+schedule.key10 = Deadline: {0} 
+schedule.key11 = Exam: {0}
+schedule.key12 = Meeting: {0}
+schedule.key13 = Multidisciplinary Conference: {0} 
+schedule.key14 = Quiz: {0}
+schedule.key15 = Special event: {0} 
+schedule.key16 = Web Assignment: {0} 
+
 
 
