DASH-47 Removed entityUrl properties from CalendarItem and NewsItem, along with setters, getters, etc. Fixed up SQL to no longer add columns for entityUrl properties or to reference them in any SQL statements. Removed other references to entityUrl's in entity processors, rendering classes, etc.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312956 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -9,7 +9,7 @@ create index dash_availability_check_time_idx on dash_availability_check(schedul
 
 create.CalendarItem.table = create table dash_calendar_item \
 ( id number not null primary key, calendar_time timestamp(0) not null, calendar_time_label_key varchar2(40), \
-title varchar2(255) not null, access_url varchar2(1024) not null, \
+title varchar2(255) not null, \
 entity_ref varchar2(265) not null, entity_type number not null, context_id number not null ); \
 create sequence dash_calendar_item_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_calendar_time_idx on dash_calendar_item (calendar_time); \
@@ -31,7 +31,7 @@ create unique index dash_context_idx on dash_context (context_id)
 
 create.NewsItem.table = create table dash_news_item ( id number not null primary key, \
 news_time timestamp(0) not null, title varchar2(255) not null, \
-access_url varchar2(1024) not null, entity_ref varchar2(265) not null, \
+entity_ref varchar2(265) not null, \
 entity_type number not null, context_id number not null ); \
 create sequence dash_news_item_seq start with 1 increment by 1 nomaxvalue; \
 create index dash_news_time_idx on dash_news_item (news_time); \
@@ -96,16 +96,16 @@ exists.CalendarItem.by.entityReference = select * from dash_calendar_item where 
 insert.AvailabilityCheck = insert into dash_availability_check (id, entity_ref, entity_type_id, scheduled_time) \
 values (dash_availability_check_seq.nextval, ?, ?, ?)
 
-insert.CalendarItem = insert into dash_calendar_item (id, calendar_time, calendar_time_label_key, title , access_url, entity_ref, entity_type, context_id) \
-values (dash_calendar_item_seq.nextval, ?, ?, ?, ?, ?, ?, ?)
+insert.CalendarItem = insert into dash_calendar_item (id, calendar_time, calendar_time_label_key, title , entity_ref, entity_type, context_id) \
+values (dash_calendar_item_seq.nextval, ?, ?, ?, ?, ?, ?)
 
 insert.CalendarLink = insert into dash_calendar_link (id, person_id, item_id, context_id, hidden, sticky) \
 values (dash_calendar_link_seq.nextval, ?, ?, ?, ?, ?)
 
 insert.Context = insert into dash_context (id, context_id, context_url, context_title) values (dash_context_seq.nextval, ?, ?, ?)
 
-insert.NewsItem = insert into dash_news_item (id, news_time, title , access_url, entity_ref, entity_type, context_id) \
-values (dash_news_item_seq.nextval, ?, ?, ?, ?, ?, ?)
+insert.NewsItem = insert into dash_news_item (id, news_time, title, entity_ref, entity_type, context_id) \
+values (dash_news_item_seq.nextval, ?, ?, ?, ?, ?)
 
 insert.NewsLink = insert into dash_news_link (id, person_id, item_id, context_id, hidden, sticky ) \
 values (dash_news_link_seq.nextval, ?, ?, ?, ?, ?)
@@ -124,35 +124,35 @@ select.AvailabilityChecks.before.date = select * from dash_availability_check wh
 
 select.AvailabilityChecks.by.entityReference = select * from dash_availability_check where entity_ref = ?
 
-select.CalendarItem.by.entityReference.calendarTimeLabelKey = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.access_url as ci_access_url, \
+select.CalendarItem.by.entityReference.calendarTimeLabelKey = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, \
 ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
 join dash_sourcetype st on st.id=ci.entity_type where ci.entity_ref=? and ci.calendar_time_label_key=?
 
 select.CalendarItem.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, \
-ci.title as ci_title, ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, 
+ci.title as ci_title, ci.entity_ref as ci_entity_ref, st.id as type_id, 
 st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
 join dash_sourcetype st on st.id=ci.entity_type where ci.id=?
 
 select.CalendarItems.by.contextId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, \
-ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_calendar_item ci join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id=ci.entity_type \
 where site.context_id=? 
 
 select.CalendarItems.by.entityReference = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, \
-ci.title as ci_title, ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, \
+ci.title as ci_title, ci.entity_ref as ci_entity_ref, st.id as type_id, \
 st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
 join dash_sourcetype st on st.id=ci.entity_type where ci.entity_ref=?
 
 select.CalendarItems.by.sakaiId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, \
-ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_person usr join dash_calendar_link link on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
@@ -160,7 +160,7 @@ join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id
 where usr.sakai_id=? order by ci.calendar_time asc
 
 select.CalendarItems.by.sakaiId.contextId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, \
-ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_person usr join dash_calendar_link link on usr.id=link.person_id join dash_calendar_item ci on ci.id=link.item_id \
@@ -168,7 +168,7 @@ join dash_context site on site.id=ci.context_id join dash_sourcetype st on st.id
 where usr.sakai_id=? and site.context_id=? order by ci.calendar_time asc
 
 select.CalendarLink.by.calendarItemId.personId = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, \
-ci.access_url as ci_access_url, ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+ci.entity_ref as ci_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title, \
 usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
@@ -183,27 +183,27 @@ site.context_url as site_context_url, site.context_title as site_context_title f
 select.Context.by.contextId = select site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title from dash_context site where site.context_id=?
 
-select.NewsItem.by.entityReference = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.access_url as ni_access_url, \
+select.NewsItem.by.entityReference = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
 ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_news_item ni join dash_context site on site.id=ni.context_id  \
 join dash_sourcetype st on st.id=ni.entity_type where ni.entity_ref=?
 
-select.NewsItem.by.id = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.access_url as ni_access_url, \
+select.NewsItem.by.id = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
 ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_news_item ni join dash_context site on site.id=ni.context_id  \
 join dash_sourcetype st on st.id=ni.entity_type where ni.id=?
 
 select.NewsItems.by.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
-ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_news_item ni join dash_context sisite.id=ci.=link.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where site.context_id=? 
 
 select.NewsItems.by.sakaiId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
-ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_person usr join dash_news_link link on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
@@ -211,7 +211,7 @@ join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id
 where usr.sakai_id=? order by ni.news_time desc
 
 select.NewsItems.by.sakaiId.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
-ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_person usr join dash_news_link link on usr.id=link.person_id join dash_news_item ni on ni.id=link.item_id \
@@ -219,7 +219,7 @@ join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id
 where usr.sakai_id=? and site.context_id=? order by ni.news_time desc
 
 select.NewsLink.by.newsItemId.personId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.news_time_label_key as ni_news_time_label_key, ni.title as ni_title, \
-ni.access_url as ni_access_url, ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
+ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title, \
 usr.id as p_id, usr.sakai_id as p_sakai_id, usr.user_id as p_user_id,  \
