DASH-71 DASH-53 Partial work on handling exclusions.  (Must delete calendar items and links for a particular instance of a repeating event).
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312963 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -143,6 +143,16 @@ from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
 join dash_sourcetype st on st.id=ci.entity_type left join dash_repeating_event rep on ci.repeating_event_id=rep.id \
 where ci.entity_ref=? and ci.calendar_time_label_key=? and ci.sequence_num=?
 
+select.CalendarItem.by.entityReference.sequenceNumber = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
+ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, ci.sequence_num as ci_sequence_num, \
+st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
+site.context_url as site_context_url, site.context_title as site_context_title, \
+rep.id as rep_id, rep.first_time as rep_first_time, rep.last_time as rep_last_time, rep.frequency as rep_frequency, rep.max_count as rep_count, \
+rep.calendar_time_label_key as rep_calendar_time_label_key, rep.title as rep_title, rep.entity_ref as rep_entity_ref \
+from dash_calendar_item ci join dash_context site on site.id=ci.context_id  \
+join dash_sourcetype st on st.id=ci.entity_type left join dash_repeating_event rep on ci.repeating_event_id=rep.id \
+where ci.entity_ref=? and ci.sequence_num=?
+
 select.CalendarItem.by.id = select ci.id as ci_id, ci.calendar_time as ci_calendar_time, \
 ci.calendar_time_label_key as ci_calendar_time_label_key, ci.title as ci_title, ci.entity_ref as ci_entity_ref, ci.sequence_num as ci_sequence_num, \
 st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
