--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -464,9 +464,13 @@ update.CalendarItem.title = update dash_calendar_item set title=? where id=?
 
 update.CalendarItem.title.calendarTime = update dash_calendar_item set title=?, calendar_time=? where id=?
 
+update.CalendarItemsLabelKey.entityReference.oldLabelKey = update dash_calendar_item set calendar_time_label_key=? where entity_ref=? and calendar_time_label_key=?
+
 update.CalendarLink = update dash_calendar_link set person_id=?, item_id=?, context_id=?, hidden=?, sticky=?  where id=?
 
 update.NewsItem.title = update dash_news_item set title=? where id=?
 
 update.NewsLink = update dash_news_link set person_id=?, item_id=?, context_id=?, hidden=?, sticky=?  where id=?
+
+update.RepeatingEventsLabelKey.entityReference.oldLabelKey = update dash_repeating_event set calendar_time_label_key=? where entity_ref=? and calendar_time_label_key=?
 
