--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -1,9 +1,16 @@
+announcement.metadata = Posted by {user-name} on {news-time}. 
+
 announcement.attachments = Attachments: {0}
 announcement.news.time = Date posted: {0}
 announcement.user.name = Posted by: {0}
 announcement.info.link = More info.
+announcement.grouped.title = {0} announcements added to {1}
 
-assignment.attachments = Attachments: {0}
+assignment.data = Due: {due-time}. Accept until: {close-time}. {grade-type}. Max points: {grade-max}.
+assignment.metadata = Posted by {user-name} on {news-time}. Assignment opened {open-time}.
+
+assignment.description = Description
+assignment.attachments = Attachments
 assignment.calendar.time = Due date: {0}
 assignment.user.name = Created by: {0}
 assignment.news.time = Date created: {0}
@@ -16,30 +23,37 @@ assignment.max.grade = max ({0})
 assignment.submission.status = Status: {0}
 assignment.due.date = Due date:
 assignment.close.date = Accept until: 
+assignment.grouped.title = {0} assignments added to {1}
 
 resource.user.name = Posted by: {0}
 resource.news.time = Date posted: {0}
 resource.info.link = Download this resource.
+resource.grouped.title = {0} resources added to {1}
+
+resource.metadata = Posted by {user-name} on {news-time}. 
+
 
 schedule.info.link = More info.
 schedule.news.time = Date posted: {0}
+schedule.metadata = Event date: {calendar-time}. Posted on {news-time}
 
-schedule.key1 = Academic Calendar: {0}
-schedule.key2 = Activity: {0}
-schedule.key3 = Cancellation: {0}
-schedule.key4 = Class section - Discussion: {0}
-schedule.key5 = Class section - Lab: {0}
-schedule.key6 = Class section - Lecture: {0}
-schedule.key7 = Class section - Small Group: {0} 
-schedule.key8 = Class session: {0} 
-schedule.key9 = Computer Session: {0} 
-schedule.key10 = Deadline: {0} 
-schedule.key11 = Exam: {0}
-schedule.key12 = Meeting: {0}
-schedule.key13 = Multidisciplinary Conference: {0} 
-schedule.key14 = Quiz: {0}
-schedule.key15 = Special event: {0} 
-schedule.key16 = Web Assignment: {0} 
+schedule.key1 = Academic Calendar: 
+schedule.key2 = Activity: 
+schedule.key3 = Cancellation: 
+schedule.key4 = Class section - Discussion: 
+schedule.key5 = Class section - Lab: 
+schedule.key6 = Class section - Lecture: 
+schedule.key7 = Class section - Small Group:  
+schedule.key8 = Class session:  
+schedule.key9 = Computer Session:  
+schedule.key10 = Deadline:  
+schedule.key11 = Exam: 
+schedule.key12 = Meeting: 
+schedule.key13 = Multidisciplinary Conference:  
+schedule.key14 = Quiz: 
+schedule.key15 = Special event:  
+schedule.key16 = Web Assignment:  
+schedule.grouped.title = {0} events added to the {1} calendar
 
 
 
