depend on the assignment type, show or hid the Max points information insie the assignment disclosure.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312978 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/bundles/resources/dash_entity.properties
+++ b/bundles/resources/dash_entity.properties
@@ -6,7 +6,8 @@ announcement.user.name = Posted by: {0}
 announcement.info.link = More info.
 announcement.grouped.title = {0} announcements added to {1}
 
-assignment.data = Due: {due-time}. Accept until: {close-time}. {grade-type}. Max points: {grade-max}.
+assignment.data = Due: {due-time}. Accept until: {close-time}. {grade-type}.
+assignment.data.with.maxpoint = Due: {due-time}. Accept until: {close-time}. {grade-type}. Max points: {grade-max}.
 assignment.metadata = Posted by {user-name} on {news-time}. Assignment opened {open-time}.
 
 assignment.description = Description
