DASH-82 Added requested methods to change time of a news item.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312979 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -319,6 +319,8 @@ update.CalendarItem.title.calendarTime = update dash_calendar_item set title=?, 
 
 update.CalendarLink = update dash_calendar_link set person_id=?, item_id=?, context_id=?, hidden=?, sticky=?  where id=?
 
+update.NewsItem.newsTime = update dash_news_item set news_time=? where id=?
+
 update.NewsItem.title = update dash_news_item set title=? where id=?
 
 update.NewsLink = update dash_news_link set person_id=?, item_id=?, context_id=?, hidden=?, sticky=?  where id=?
