--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -24,7 +24,7 @@ context_url varchar(1024) not null, context_title varchar(255) not null, primary
 create unique index dash_context_idx on dash_context (context_id)
 
 create.NewsItem.table = create table if not exists dash_news_item ( id bigint not null auto_increment, news_time datetime not null, \
-title varchar(255) not null, entity_ref varchar(265) character set ascii not null, entity_type bigint not null, \
+news_time_label_key varchar(40) character set ascii, title varchar(255) not null, entity_ref varchar(265) character set ascii not null, entity_type bigint not null, \
 context_id bigint not null, primary key (id) ); \
 create index dash_news_time_idx on dash_news_item (news_time); \
 create unique index dash_news_entity_idx on dash_news_item (entity_ref)
@@ -101,8 +101,8 @@ insert.CalendarLink = insert into dash_calendar_link (person_id, item_id, contex
 
 insert.Context = insert into dash_context (context_id, context_url, context_title) values (?, ?, ?)
 
-insert.NewsItem = insert into dash_news_item (news_time, title, entity_ref, entity_type, context_id) \
-values (?, ?, ?, ?, ?)
+insert.NewsItem = insert into dash_news_item (news_time, title, news_time_label_key, entity_ref, entity_type, context_id) \
+values (?, ?, ?, ?, ?, ?)
 
 insert.NewsLink = insert into dash_news_link (person_id, item_id, context_id, hidden, sticky) values (?, ?, ?, ?, ?)
 
@@ -317,26 +317,26 @@ site.context_url as site_context_url, site.context_title as site_context_title f
 select.Context.by.contextId = select site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title from dash_context site where site.context_id=?
 
-select.NewsItem.by.entityReference = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+select.NewsItem.by.entityReference = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
 ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_news_item ni join dash_context site on site.id=ni.context_id  \
 join dash_sourcetype st on st.id=ni.entity_type where ni.entity_ref=?
 
-select.NewsItem.by.id = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+select.NewsItem.by.id = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
 ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_news_item ni join dash_context site on site.id=ni.context_id  \
 join dash_sourcetype st on st.id=ni.entity_type where ni.id=?
 
-select.NewsItems.by.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+select.NewsItems.by.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
 ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_news_item ni join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where site.context_id=? 
 
-select.NewsItems.by.sakaiId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+select.NewsItems.by.sakaiId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
 ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
@@ -347,7 +347,7 @@ and st.id not in (select ps.sourcetype_id from dash_person_sourcetype ps where p
 and st.id not in (select pcs.sourcetype_id from dash_person_context_type pcs where pcs.person_id=usr.id and pcs.context_id=site.id and pcs.item_type='1') \
 and link.sticky='0' and link.hidden='0' order by ni.news_time desc
 
-select.NewsItems.by.sakaiId.hidden = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+select.NewsItems.by.sakaiId.hidden = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
 ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
@@ -355,7 +355,7 @@ from dash_person usr join dash_news_link link on usr.id=link.person_id join dash
 join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where usr.sakai_id=? and link.hidden='1' order by ni.news_time desc
 
-select.NewsItems.by.sakaiId.sticky = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+select.NewsItems.by.sakaiId.sticky = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
 ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
@@ -363,7 +363,7 @@ from dash_person usr join dash_news_link link on usr.id=link.person_id join dash
 join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where usr.sakai_id=? and link.sticky='1' order by ni.news_time desc
 
-select.NewsItems.by.sakaiId.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+select.NewsItems.by.sakaiId.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
 ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
@@ -374,7 +374,7 @@ and st.id not in (select ps.sourcetype_id from dash_person_sourcetype ps where p
 and st.id not in (select pcs.sourcetype_id from dash_person_context_type pcs where pcs.person_id=usr.id and pcs.context_id=site.id and pcs.item_type='1') \
 and link.sticky='0' and link.hidden='0' order by ni.news_time desc
 
-select.NewsItems.by.sakaiId.contextId.sticky = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+select.NewsItems.by.sakaiId.contextId.sticky = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
 ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
@@ -382,7 +382,7 @@ from dash_person usr join dash_news_link link on usr.id=link.person_id join dash
 join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where usr.sakai_id=? and site.context_id=? and link.sticky='1' order by ni.news_time desc
 
-select.NewsItems.by.sakaiId.contextId.hidden = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+select.NewsItems.by.sakaiId.contextId.hidden = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
 ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
@@ -390,7 +390,7 @@ from dash_person usr join dash_news_link link on usr.id=link.person_id join dash
 join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where usr.sakai_id=? and site.context_id=? and link.hidden='1' order by ni.news_time desc
 
-select.NewsLink.by.newsItemId.personId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+select.NewsLink.by.newsItemId.personId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
 ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title, \
@@ -469,6 +469,8 @@ update.CalendarItemsLabelKey.entityReference.oldLabelKey = update dash_calendar_
 update.CalendarLink = update dash_calendar_link set person_id=?, item_id=?, context_id=?, hidden=?, sticky=?  where id=?
 
 update.NewsItem.newsTime = update dash_news_item set news_time=? where id=?
+
+update.NewsItem.newsTimeLabelKey = update dash_news_item set news_time_label_key=? where id=?
 
 update.NewsItem.title = update dash_news_item set title=? where id=?
 
