--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -31,7 +31,7 @@ create sequence dash_context_seq start with 1 increment by 1 nomaxvalue; \
 create unique index dash_context_idx on dash_context (context_id)
 
 create.NewsItem.table = create table dash_news_item ( id number not null primary key, \
-news_time timestamp(0) not null, title varchar2(255) not null, \
+news_time timestamp(0) not null, news_time_label_key varchar2(40), title varchar2(255) not null, \
 entity_ref varchar2(265) not null, \
 entity_type number not null, context_id number not null ); \
 create sequence dash_news_item_seq start with 1 increment by 1 nomaxvalue; \
@@ -114,8 +114,8 @@ values (dash_calendar_link_seq.nextval, ?, ?, ?, ?, ?)
 
 insert.Context = insert into dash_context (id, context_id, context_url, context_title) values (dash_context_seq.nextval, ?, ?, ?)
 
-insert.NewsItem = insert into dash_news_item (id, news_time, title, entity_ref, entity_type, context_id) \
-values (dash_news_item_seq.nextval, ?, ?, ?, ?, ?)
+insert.NewsItem = insert into dash_news_item (id, news_time, title, news_time_label_key, entity_ref, entity_type, context_id) \
+values (dash_news_item_seq.nextval, ?, ?, ?, ?, ?, ?)
 
 insert.NewsLink = insert into dash_news_link (id, person_id, item_id, context_id, hidden, sticky ) \
 values (dash_news_link_seq.nextval, ?, ?, ?, ?, ?)
@@ -223,26 +223,26 @@ site.context_url as site_context_url, site.context_title as site_context_title f
 select.Context.by.contextId = select site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title from dash_context site where site.context_id=?
 
-select.NewsItem.by.entityReference = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+select.NewsItem.by.entityReference = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
 ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, \
 site.id as site_id, site.context_id as site_context_id,  site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_news_item ni join dash_context site on site.id=ni.context_id  \
 join dash_sourcetype st on st.id=ni.entity_type where ni.entity_ref=?
 
-select.NewsItem.by.id = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+select.NewsItem.by.id = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
 ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, st.access_permission as type_accessPermission, \
 site.id as site_id, site.context_id as site_context_id,  site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_news_item ni join dash_context site on site.id=ni.context_id  \
 join dash_sourcetype st on st.id=ni.entity_type where ni.id=?
 
-select.NewsItems.by.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+select.NewsItems.by.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
 ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_news_item ni join dash_context sisite.id=ci.=link.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where site.context_id=? 
 
-select.NewsItems.by.sakaiId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+select.NewsItems.by.sakaiId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
 ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
@@ -250,7 +250,7 @@ from dash_person usr join dash_news_link link on usr.id=link.person_id join dash
 join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where usr.sakai_id=? order by ni.news_time desc
 
-select.NewsItems.by.sakaiId.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, \
+select.NewsItems.by.sakaiId.contextId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
 ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title \
@@ -258,7 +258,7 @@ from dash_person usr join dash_news_link link on usr.id=link.person_id join dash
 join dash_context site on site.id=ni.context_id join dash_sourcetype st on st.id=ni.entity_type \
 where usr.sakai_id=? and site.context_id=? order by ni.news_time desc
 
-select.NewsLink.by.newsItemId.personId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.news_time_label_key as ni_news_time_label_key, ni.title as ni_title, \
+select.NewsLink.by.newsItemId.personId = select ni.id as ni_id, ni.news_time as ni_news_time, ni.news_time_label_key as ni_news_time_label_key, ni.title as ni_title, ni.news_time_label_key as ni_news_time_label_key, \
 ni.entity_ref as ni_entity_ref, st.id as type_id, st.identifier as type_identifier, \
 st.access_permission as type_accessPermission, site.id as site_id, site.context_id as site_context_id,  \
 site.context_url as site_context_url, site.context_title as site_context_title, \
@@ -333,6 +333,8 @@ update.CalendarItem.title.calendarTime = update dash_calendar_item set title=?, 
 update.CalendarLink = update dash_calendar_link set person_id=?, item_id=?, context_id=?, hidden=?, sticky=? where id=?
 
 update.NewsItem.newsTime = update dash_news_item set news_time=? where id=?
+
+update.NewsItem.newsTimeLabelKey = update dash_news_item set news_time_label_key=? where id=?
 
 update.NewsItem.title = update dash_news_item set title=? where id=?
 
