DASH-4 Added support in dao and logic layers for revising contextTitle.
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312982 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -471,6 +471,8 @@ update.CalendarItemsLabelKey.entityReference.oldLabelKey = update dash_calendar_
 
 update.CalendarLink = update dash_calendar_link set person_id=?, item_id=?, context_id=?, hidden=?, sticky=?  where id=?
 
+update.Context.title = update dash_context set context_title=? where context_id=?
+
 update.NewsItem.newsTime = update dash_news_item set news_time=? where id=?
 
 update.NewsItem.newsTimeLabelKey = update dash_news_item set news_time_label_key=? where id=?
