--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -323,6 +323,8 @@ update.CalendarItem.title.calendarTime = update dash_calendar_item set title=?, 
 
 update.CalendarLink = update dash_calendar_link set person_id=?, item_id=?, context_id=?, hidden=?, sticky=?  where id=?
 
+update.Context.title = update dash_context set context_title=? where context_id=?
+
 update.NewsItem.newsTime = update dash_news_item set news_time=? where id=?
 
 update.NewsItem.newsTimeLabelKey = update dash_news_item set news_time_label_key=? where id=?
